# Rasberry_Client

./: .gitignore  CMakeLists.txt  main.cpp
camera/inc/: camera.h
camera/src/: camera.cpp
extern_var/inc/: config.h
extern_var/src/: config.cpp
log/inc/: log_module.h
log/src/: log_module.cpp
network/inc/: net_module.h  net_protocol.h
network/src/: net_module.cpp
test/inc/: test.h  test_camera.h  test_net.h
test/src/: test.cpp  test_camera.cpp  test_net.cpp
